--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -15,7 +15,12 @@
     left: 8vw;
     transform: rotate(-25deg);
     font-weight: 900;
-    // animation: ${heroLoad} .7s;
+    @keyframes heroLoad {
+      0% {
+        left: -8vw;
+      }
+    }
+    animation: heroLoad .7s;
 
     & > * {
       margin: 7px 0;
@@ -35,7 +40,6 @@
       margin: 0 10vw 0 0;
       & > .typed {
         font-weight: bolder;
-        /* font-size: 20px; */
         background-image: linear-gradient(45deg, #6303B1, #ff0099);
       }
     }
@@ -53,7 +57,6 @@
         .hero-link-atag {
           text-decoration: none;
           color: inherit;
-          /* border: 2px solid white; */
           &:hover {
               background-image: linear-gradient(45deg, #6303B1, #ff0099);
               background-clip: text;
@@ -78,7 +81,15 @@
     width: 100%;
     height: 100%;
 
-    // animation: ${imageLoad} ease 2s;
+    @keyframes menuLoad {
+      0% {
+        opacity: 0;
+      }
+      100% {
+          opacity: 1;
+      }
+    }
+    animation: imageLoad ease 2s;
   }
 
   .hero-icons-container {
