--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .hero-container {
   height: 110vh;
   text-align: start;
@@ -20,7 +22,7 @@
         left: -8vw;
       }
     }
-    animation: heroLoad .7s;
+    animation: heroLoad 0.7s;
 
     & > * {
       margin: 7px 0;
@@ -28,7 +30,7 @@
     & > h1 {
       display: inline-block;
       font-size: 5rem;
-      background-image: linear-gradient(45deg, #6303B1, #ff0099);
+      background-image: $grade-color;
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -40,30 +42,32 @@
       margin: 0 10vw 0 0;
       & > .typed {
         font-weight: bolder;
-        background-image: linear-gradient(45deg, #6303B1, #ff0099);
+        background-image: $grade-color;
       }
     }
 
     .hero-links {
       & > span {
         margin: 0px 6px;
-        background-image: linear-gradient(45deg, #6303B1, #ff0099);
+        background-image: $grade-color;
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        text-shadow: none;
+        filter: drop-shadow(2px 2px #000);
       }
 
       .hero-link {
         .hero-link-atag {
           text-decoration: none;
-          color: inherit;
+          color: #0473fc;
           &:hover {
-              background-image: linear-gradient(45deg, #6303B1, #ff0099);
-              background-clip: text;
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;
-              text-shadow: none;
-              filter: drop-shadow(2px 2px #000);
+            background-image: $grade-color;
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: none;
+            filter: drop-shadow(2px 2px #000);
           }
         }
       }
@@ -77,7 +81,7 @@
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
-    filter: grayscale(40%) brightness(60%);
+    filter: grayscale(40%) brightness(45%);
     width: 100%;
     height: 100%;
 
@@ -86,7 +90,7 @@
         opacity: 0;
       }
       100% {
-          opacity: 1;
+        opacity: 1;
       }
     }
     animation: imageLoad ease 2s;
@@ -104,19 +108,19 @@
     .hero-icons {
       margin: 5px 10px;
       & > a {
-          color: white
+        color: white;
       }
       & > #git:hover {
-          color: #6303B1;
+        color: #0473fc;
       }
       & > #mail:hover {
-          color: #AC00AC;
+        color: #7b00ac;
       }
       & > #linked:hover {
-          color: #BC0098;
+        color: #bc0098;
       }
       & > #resume:hover {
-          color: #ff0099;
+        color: #ff0099;
       }
     }
   }
