minor updates to scrollable components

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -21,7 +21,7 @@ $mediaMedium: 1200px;
     color: white;
     filter: drop-shadow(2px 2px #000);
     font-weight: 900;
-    margin: 0 0 1.5vh;
+    margin: 0 18vh 1.5vh;
   }
 
   .about-content-container {
