--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -30,12 +30,12 @@
     & > h1 {
       display: inline-block;
       font-size: 5rem;
-      background-image: $grade-color;
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: none;
-      filter: drop-shadow(2px 2px #000);
+      // background-image: $grade-color;
+      // background-clip: text;
+      // -webkit-background-clip: text;
+      // -webkit-text-fill-color: transparent;
+      // text-shadow: none;
+      // filter: drop-shadow(2px 2px #000);
     }
 
     .hero-descriptions {
